--- a/recovery/root/ueventd.samsungexynos7580.rc
+++ b/recovery/root/ueventd.samsungexynos7580.rc
@@ -98,18 +98,22 @@
 # audio
 /dev/seiren               0660   system     audio
 
+# MobiCore
+/dev/mobicore             0700   system     system
+/dev/mobicore-user        0666   radio     	system
+
+# Fingerprint Sensor
+/dev/vfsspi        0660   system     system
+/dev/esfp0         0660   system     system
+
 # Secure MEM driver
 /dev/s5p-smem             0660   drm        drmrpc
 
 # Modem Interface
 /dev/block/platform/13540000.dwmmc0/by-name/RADIO     0660   system     radio
+/dev/block/platform/13540000.dwmmc0/by-name/CP_DEBUG  0660   system     radio
 /dev/umts*                0660   system     radio
-
-# Blowfish
-/dev/tzdev                0660   system     system
-/dev/ionfd2phys           0660   system     radio
-/dev/tuihw                0660   system     system
-/dev/tzirs                0660   system     system
+/dev/smd4		  0660	 system     radio
 
 # Sensorhub IIO
 /dev/ssp_sensorhub        0660   system		system
@@ -118,41 +122,22 @@
 /sys/devices/13910000.spi/spi_master/spi0/spi0.0/iio:device*    buffer/length       0660    system    system
 /sys/bus/iio/devices/iio:device*    0664   system     radio
 
-# Dynamic Cluster Hotplug
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/target_loads	0660	system	system
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/above_hispeed_delay	0660	system	system
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/hispeed_freq	0660	system	system
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/go_hispeed_load	0660	system	system
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/min_sample_time	0660	system	system
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/timer_rate	0660	system	system
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/timer_slack	0660	system	system
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/boost	0660	system	system
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/boostpulse	0200	system	system
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/boostpulse_duration	0660	system	system
-/sys/devices/system/cpu/cpu0/cpufreq	interactive/io_is_busy	0660	system	system
-
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/target_loads	0660	system	system
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/above_hispeed_delay	0660	system	system
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/hispeed_freq	0660	system	system
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/go_hispeed_load	0660	system	system
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/min_sample_time	0660	system	system
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/timer_rate	0660	system	system
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/timer_slack	0660	system	system
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/boost	0660	system	system
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/boostpulse	0200	system	system
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/boostpulse_duration	0660	system	system
-/sys/devices/system/cpu/cpu4/cpufreq	interactive/io_is_busy	0660	system	system
+# interactive governor parameters
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/timer_rate                  0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/timer_slack                 0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/min_sample_time             0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/hispeed_freq                0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/target_loads                0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/go_hispeed_load             0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/above_hispeed_delay         0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/boost                       0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/boostpulse                  0200    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/input_boost                 0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/boostpulse_duration         0660    system  system
+/sys/devices/system/cpu/cpu*   cpufreq/interactive/io_is_busy                  0660    system  system
 
 # Audio NXP AMP
 /dev/i2c-20                0660   system     system
 
 # Google FRP solution
 /dev/block/platform/13540000.dwmmc0/by-name/PERSISTENT    0660    system    system
-
-# MobiCore
-/dev/mobicore             0700   system     system
-/dev/mobicore-user        0666   radio     	system
-
-# Fingerprint Sensor
-/dev/vfsspi        0660   system     system
-/dev/esfp0         0660   system     system
